solve the problem of image visibilty

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html,body{
     width: 100%;
     height: 100%;
     font-family: sans-serif;
+
 }
 
 .display{
@@ -15,7 +16,7 @@ html,body{
 }
 
 .main{
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
 }
 
 spam{
@@ -43,6 +44,11 @@ spam{
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2rem;
+    position:sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
 }
 
 .navbar-icons{
@@ -162,9 +168,10 @@ spam{
 }
 
 .img2{
-    top: 40%;
-    left: 25%;
+    top: 39%;
+    left: 38%;
     z-index: -1;
+    transform: scale(0.5);
 }
 
 .img1{
@@ -507,7 +514,7 @@ spam{
     display: flex;
     background-color: #754ffe;
     min-height:auto;
-    height: 300px;
+    /* height: 300px; */
     min-width:200px ;
     max-width: 900px;
     margin: 2rem auto;
